MH-4393 + red5 improvements, fullscreenmode, skinning
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7744 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/Videodisplay.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/Videodisplay.mxml
@@ -87,6 +87,9 @@
                 else
                 {
                     model.fullscreenMode = false;
+                    model.multiMediaContainerLeft = model.multiMediaContainerLeftNormalscreen;
+                    model.multiMediaContainerRight = model.multiMediaContainerRightNormalscreen;
+                    model.multiMediaContainerBottom = 0;
                 }
             }
 
