--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
@@ -26,10 +26,13 @@
     width="100%"
     height="100%"
     resize="{ onResize() }"
+    
     >
 
     <mx:Script>
         <![CDATA[
+        	import mx.controls.Alert;
+        	import org.opencast.engage.videodisplay.state.CoverState;
         	import mx.core.Application;
             import org.swizframework.Swiz;
             import org.opencast.engage.videodisplay.model.VideodisplayModel;
@@ -41,23 +44,42 @@
             
             private function onResize():void
             {
-                img_cover.x = ( Application.application.width / 2 ) - img_cover.contentWidth / 2;
-            
+                if( model.coverState == CoverState.ONECOVER )
+                {
+                    img_coverOne.x = ( ( Application.application.width - 10 ) / 2 ) - img_coverOne.contentWidth / 2;
+                   
+                }
+                else
+                {
+                	img_coverOne.x = ( ( Application.application.width - 10 ) / 2 ) - ( ( img_coverOne.contentWidth + img_coverTwo.contentWidth )  / 2 );
+                	img_coverTwo.x = img_coverOne.x + img_coverOne.contentWidth +1;
+                }
             }
         ]]>
     </mx:Script>
     
-  
-    
     <mx:Image 
-    	id="img_cover"
+    	id="img_coverOne"
         width="100%"
         height="100%"
         autoLoad="true"
-    	source="{ model.coverURL }"
+    	source="{ model.coverURLOne }"
     	scaleContent="true"
     	updateComplete="{ onResize() }"
+    	visible="{ model.coverURLOne != '' ? true : false }"
+        includeInLayout="{ model.coverURLOne != '' ? true : false }"
         />
-
+        
+    <mx:Image 
+        id="img_coverTwo"
+        width="100%"
+        height="100%"
+        autoLoad="true"
+        source="{ model.coverURLTwo }"
+        scaleContent="true"
+        updateComplete="{ onResize() }"
+        visible="{ model.coverURLTwo != '' ? true : false }"
+        includeInLayout="{ model.coverURLTwo != '' ? true : false }"
+        />
   
 </mx:Canvas>
